[package]
name = "task_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = "runtime-tokio" }
tokio = { version = "1.35.1", features = ["full"]}
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "any"]}
serde = { version = "1.0.195", features = ["derive"]}
serde_json = { version = "1.0.111"}
